workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__shape__test__can_handle_set_parameter_shape_command__new_events.snap
---
source: workspaces/optic-engine-native/src/commands/shape.rs
expression: new_events
---
[
    ShapeParameterShapeSet(
        ShapeParameterShapeSet {
            shape_descriptor: ProviderInShape(
                ProviderInShape {
                    shape_id: "nullable_shape_1",
                    provider_descriptor: ShapeProvider(
                        ShapeProvider {
                            shape_id: "string_shape_1",
                        },
                    ),
                    consuming_parameter_id: "$nullableInner",
                },
            ),
            event_context: None,
        },
    ),
]
