workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__shape__test__can_handle_set_parameter_shape_command__no_shape_provider_result.snap
---
source: workspaces/optic-engine-native/src/commands/shape.rs
expression: no_shape_provider_result.unwrap_err()
---
Unimplemented(
    "only ShapeProvider provider descriptor is implemented for set shape parameter shape",
    ShapeCommand(
        SetParameterShape(
            SetParameterShape {
                shape_descriptor: ProviderInShape(
                    ProviderInShape {
                        shape_id: "nullable_shape_1",
                        provider_descriptor: NoProvider(
                            NoProvider,
                        ),
                        consuming_parameter_id: "$nullableInner",
                    },
                ),
            },
        ),
    ),
)
