workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__shape__test__can_handle_set_parameter_shape_command__unexisting_provided_shape_id_result.snap
---
source: workspaces/optic-engine-native/src/commands/shape.rs
expression: unexisting_provided_shape_id_result.unwrap_err()
---
Validation(
    "Command failed validation: provided shape must exist to set shape parameter shape, \"SetParameterShape(SetParameterShape { shape_descriptor: ProviderInShape(ProviderInShape { shape_id: \\\"nullable_shape_1\\\", provider_descriptor: ShapeProvider(ShapeProvider { shape_id: \\\"not-a-shape-id\\\" }), consuming_parameter_id: \\\"$nullableInner\\\" }) })\"",
)
